--- a/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
@@ -43,11 +43,6 @@
             </div>
 
             <div class="mb-3">
-              <label for="id_cliente-Direccion">Dirección</label>
-              <input type="text" id="id_cliente-Direccion" name="cliente-Direccion" class="form-control" required />
-            </div>
-
-            <div class="mb-3">
               <label for="id_cliente-Rut">RUT</label>
               <input type="text" id="id_cliente-Rut" name="cliente-Rut" class="form-control" required />
             </div>
@@ -77,7 +72,7 @@
 
             <div class="mb-2">
               <label for="modelo-select">Modelo</label>
-              <select id="modelo-select" name="dispositivo-modelo" class="form-select" disabled>
+              <select id="modelo-select" name="dispositivo-modelo" class="form-select">
                 <option value="">Seleccione modelo</option>
               </select>
             </div>
